--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div id="gameMenu">
+    <h1>CLASSIC ARCADE GAME</h1>
+    <h3>FROM GRASS TO WATER</h3>
+    <p>Successfully walk player into water without colliding any obstacles.</p>
+    <Ol>
+      <li>Use keyboard's arrow keys to walk the player.</li>
+      <li>If the player collides with any obstacles, game will reset.</li>
+    </Ol>
+    <h3>END OF GAME</h3>
+    <ul class="content">
+      <li>The game ends when the player reach the water.</li>
+      <li>To Play Again: press Enter key.</li>
+    </ul>
+    <button class=playButton>Play</button>
+  </div>
+  <canvas id="gameCanvas"></canvas>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
