--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </ul>
     <button class=playButton>Play</button>
   </div>
+  <div class="timer">
+    <span id="minutes"></span>:<span id="seconds"></span>
+  </div>
   <canvas id="gameCanvas"></canvas>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
