Edit game menu to include score

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
     <h1>CLASSIC ARCADE GAME</h1>
     <h3>FROM GRASS TO WATER</h3>
     <p>Successfully walk player into water without colliding any obstacles.</p>
-    <Ol>
+    <ol>
       <li>Use keyboard's arrow keys to walk the player.</li>
-      <li>If the player collides with any obstacles, game will reset.</li>
-    </Ol>
+      <li>If the player collides with any bugs, game will reset.</li>
+      <li>Each forward step scores 10 points.</li>
+      <li>Each collected gem scores 10 points.</li>
+      <li>Each backward step deduct 10 points.</li>
+    </ol>
     <h3>END OF GAME</h3>
-    <ul class="content">
+    <ol>
       <li>The game ends when the player reach the water.</li>
+      <li>Your score and time will displayed.</li>
       <li>To Play Again: press Enter key.</li>
-    </ul>
+    </ol>
     <button class=playButton>Play</button>
   </div>
   <div class="timer">
